--- a/Jogos/CentralJogos.html
+++ b/Jogos/CentralJogos.html
@@ -85,6 +85,9 @@
                     LazerRunner
                 </a>
             </li>
+            <li>
+                <a href="" class="#">Ping-Pong 2 (Em breve)</a>
+            </li>
             <!-- Outros jogos podem ser adicionados assim:
             <li>
                 <a href="OutroJogo/OutroJogo.html" class="game-link">
