--- a/Jogos/CentralJogos.html
+++ b/Jogos/CentralJogos.html
@@ -86,7 +86,7 @@
                 </a>
             </li>
             <li>
-                <a href="" class="#">Ping-Pong 2 (Em breve)</a>
+                <a href="#" class="game-link">Ping-Pong 2 (Em breve)</a>
             </li>
             <!-- Outros jogos podem ser adicionados assim:
             <li>
