--- a/Jogos/Lazerunner/LazeRunner.html
+++ b/Jogos/Lazerunner/LazeRunner.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lazer Runner</title>
   <style>
     body {
@@ -39,13 +39,14 @@
       font-size: 14px;
       color: #aaa;
     }
+    /* Telas */
     #startScreen, #gameOverScreen {
       position: absolute;
       top: 0;
       left: 0;
       width: 100%;
       height: 100%;
-      background: rgba(0, 0, 0, 0.8);
+      background: rgba(0,0,0,0.8);
       display: flex;
       flex-direction: column;
       justify-content: center;
@@ -54,21 +55,19 @@
       font-size: 48px;
       text-align: center;
     }
+    #startScreen.hidden, #gameOverScreen.hidden { display: none; }
     #startScreen button, #gameOverScreen button {
       margin: 20px;
       padding: 10px 20px;
       font-size: 24px;
       cursor: pointer;
-      background-color: #fff;
-      color: #000;
+      background-color: white;
+      color: black;
       border: none;
       border-radius: 5px;
     }
     #startScreen button:hover, #gameOverScreen button:hover:not(:disabled) {
       background-color: #ccc;
-    }
-    #startScreen.hidden, #gameOverScreen.hidden {
-      display: none;
     }
     #saveRankingButton:disabled {
       background-color: #888;
@@ -76,7 +75,7 @@
       cursor: not-allowed;
       opacity: 0.6;
     }
-    /* Estilo do botão Voltar */
+    /* Botão voltar */
     #backButton {
       position: absolute;
       top: 10px;
@@ -84,8 +83,8 @@
       padding: 8px 16px;
       font-size: 18px;
       cursor: pointer;
-      background-color: #fff;
-      color: #000;
+      background-color: white;
+      color: black;
       border: none;
       border-radius: 5px;
       z-index: 1000;
@@ -96,7 +95,7 @@
   </style>
 </head>
 <body>
-  <button id="backButton" onclick="window.location.href = '../CentralJogos.html'">Voltar</button>
+  <button id="backButton" onclick="window.location.href='../CentralJogos.html'">Voltar</button>
   <canvas id="gameCanvas" width="900" height="900"></canvas>
   <div id="ranking">
     <h2>Ranking</h2>
@@ -113,17 +112,15 @@
     <button id="saveRankingButton">Salvar no Ranking</button>
   </div>
   <div id="footer">
-    Mover: Setas ou WASD<br />
-    Imunidade: Barra de espaço<br />
+    Mover: Setas ou WASD<br>
+    Imunidade: Barra de espaço<br>
     Reiniciar: Enter
   </div>
   <div id="version">Versão 1.3</div>
 
   <script>
-    document.addEventListener('contextmenu', e => {
-      e.preventDefault();
-      alert('Clique com o botão direito desativado.');
-    });
+    // Previne clique direito e F12
+    document.addEventListener('contextmenu', e => { e.preventDefault(); alert('Clique com o botão direito desativado.'); });
     document.addEventListener('keydown', e => {
       if (e.key === 'F12' || e.keyCode === 123) {
         e.preventDefault();
@@ -133,6 +130,7 @@
 
     const canvas = document.getElementById('gameCanvas');
     const ctx = canvas.getContext('2d');
+
     const startScreen = document.getElementById('startScreen');
     const gameOverScreen = document.getElementById('gameOverScreen');
     const playButton = document.getElementById('playButton');
@@ -140,67 +138,54 @@
     const saveRankingButton = document.getElementById('saveRankingButton');
     const finalScoreText = document.getElementById('finalScore');
 
-    let gameStarted = false;
-    let scoreSaved = false;
-    const boundary = { x: 70, y: 70, width: canvas.width - 140, height: canvas.height - 140 };
+    let gameStarted = false, scoreSaved = false;
+    let bars = [], score = 0, gameOver = false;
+
+    const boundary = { x:70, y:70, width:canvas.width-140, height:canvas.height-140 };
     const player = {
-      x: canvas.width / 2,
-      y: canvas.height / 2,
-      radius: 20,
-      speed: 4,
-      immune: false,
-      immuneTime: 0,
-      immuneDuration: 1500,
-      immuneCooldown: 2000,
-      lastImmuneEnd: 0
+      x: canvas.width/2, y: canvas.height/2,
+      radius: 20, speed: 4,
+      immune: false, immuneTime:0,
+      immuneDuration:1500, immuneCooldown:2000,
+      lastImmuneEnd:0
     };
-    let bars = [];
-    let score = 0;
-    let gameOver = false;
-    let keys = {
-      ArrowUp: false, ArrowDown: false,
-      ArrowLeft: false, ArrowRight: false,
-      w: false, W: false,
-      s: false, S: false,
-      a: false, A: false,
-      d: false, D: false,
-      ' ': false, Enter: false
+
+    const keys = {
+      ArrowUp:false, ArrowDown:false,
+      ArrowLeft:false, ArrowRight:false,
+      w:false,W:false,s:false,S:false,
+      a:false,A:false,d:false,D:false,
+      ' ':false, Enter:false
     };
+
     let rankings = JSON.parse(localStorage.getItem('rankings')) || [];
 
     function saveRanking() {
-      try {
-        localStorage.setItem('rankings', JSON.stringify(rankings));
-      } catch (e) {
-        alert('Erro ao salvar a pontuação.');
-      }
+      try { localStorage.setItem('rankings', JSON.stringify(rankings)); }
+      catch (e) { alert('Erro ao salvar a pontuação.'); }
     }
 
     function updateRanking() {
       const list = document.getElementById('rankingList');
       list.innerHTML = '';
-      rankings.sort((a, b) => b.score - a.score)
-              .slice(0, 10)
-              .forEach(e => {
-        const li = document.createElement('li');
-        li.textContent = `${e.name} - ${e.score}`;
-        list.appendChild(li);
-      });
+      rankings.sort((a,b)=>b.score-a.score).slice(0,10)
+        .forEach(e => {
+          const li = document.createElement('li');
+          li.textContent = `${e.name} - ${e.score}`;
+          list.appendChild(li);
+        });
     }
 
     document.addEventListener('keydown', e => {
       if (e.key in keys) {
         keys[e.key] = true;
-
         if (e.key === ' ' && !player.immune && Date.now() - player.lastImmuneEnd >= player.immuneCooldown) {
           player.immune = true;
           player.immuneTime = Date.now();
         }
-
         if (e.key === 'Enter' && gameOver) resetGame();
       }
     });
-
     document.addEventListener('keyup', e => {
       if (e.key in keys) keys[e.key] = false;
     });
@@ -210,20 +195,16 @@
       gameStarted = true;
       resetGame();
     });
-
     restartButton.addEventListener('click', () => {
       gameOverScreen.classList.add('hidden');
       resetGame();
     });
-
     saveRankingButton.addEventListener('click', () => {
       if (scoreSaved) return;
-
       const name = prompt('Digite seu nome:');
       if (name && name.trim()) {
         rankings.push({ name: name.trim(), score });
-        saveRanking();
-        updateRanking();
+        saveRanking(); updateRanking();
         scoreSaved = true;
         saveRankingButton.disabled = true;
         saveRankingButton.textContent = 'Salvo';
@@ -234,8 +215,8 @@
     });
 
     function resetGame() {
-      player.x = canvas.width / 2;
-      player.y = canvas.height / 2;
+      player.x = canvas.width/2;
+      player.y = canvas.height/2;
       player.immune = false;
       score = 0;
       bars = [];
@@ -249,60 +230,57 @@
     }
 
     function createBar() {
-      const dir = Math.floor(Math.random() * 4);
+      const dir = Math.floor(Math.random()*4);
       const thickness = 30;
-      const length = Math.random() * 400 + 200;
-      const speed = 2 + Math.random() * 1.8;
+      const length = Math.random()*400 + 200;
+      const speed = 2 + Math.random()*1.8;
       let bar;
       switch (dir) {
         case 0:
-          bar = { x: -thickness, y: Math.random() * (canvas.height - length), width: thickness, height: length, dx: speed, dy: 0 };
+          bar = { x:-thickness, y:Math.random()*(canvas.height-length), width:thickness, height:length, dx:speed, dy:0 };
           break;
         case 1:
-          bar = { x: canvas.width, y: Math.random() * (canvas.height - length), width: thickness, height: length, dx: -speed, dy: 0 };
+          bar = { x:canvas.width, y:Math.random()*(canvas.height-length), width:thickness, height:length, dx:-speed, dy:0 };
           break;
         case 2:
-          bar = { x: Math.random() * (canvas.width - length), y: -thickness, width: length, height: thickness, dx: 0, dy: speed };
+          bar = { x:Math.random()*(canvas.width-length), y:-thickness, width:length, height:thickness, dx:0, dy:speed };
           break;
         case 3:
-          bar = { x: Math.random() * (canvas.width - length), y: canvas.height, width: length, height: thickness, dx: 0, dy: -speed };
+          bar = { x:Math.random()*(canvas.width-length), y:canvas.height, width:length, height:thickness, dx:0, dy:-speed };
           break;
       }
       bars.push(bar);
     }
 
     function movePlayer(dt) {
-      let dx = 0, dy = 0;
-      if (keys.ArrowUp || keys.w) dy--;
-      if (keys.ArrowDown || keys.s) dy++;
-      if (keys.ArrowLeft || keys.a) dx--;
-      if (keys.ArrowRight || keys.d) dx++;
-
-      if (dx || dy) {
+      let dx=0, dy=0;
+      if (keys.ArrowUp||keys.w) dy--;
+      if (keys.ArrowDown||keys.s) dy++;
+      if (keys.ArrowLeft||keys.a) dx--;
+      if (keys.ArrowRight||keys.d) dx++;
+      if (dx||dy) {
         const len = Math.hypot(dx, dy);
-        player.x += (dx / len) * player.speed;
-        player.y += (dy / len) * player.speed;
-        player.x = Math.max(boundary.x + player.radius, Math.min(player.x, boundary.x + boundary.width - player.radius));
-        player.y = Math.max(boundary.y + player.radius, Math.min(player.y, boundary.y + boundary.height - player.radius));
+        player.x += dx/len * player.speed;
+        player.y += dy/len * player.speed;
+        player.x = Math.max(boundary.x+player.radius, Math.min(player.x, boundary.x+boundary.width-player.radius));
+        player.y = Math.max(boundary.y+player.radius, Math.min(player.y, boundary.y+boundary.height-player.radius));
       }
     }
 
     function moveBars(dt) {
-      bars.forEach(b => {
+      for (const b of bars) {
         b.x += b.dx * dt;
         b.y += b.dy * dt;
-      });
+      }
     }
 
     function checkCollisions() {
       if (player.immune) return;
       for (const b of bars) {
-        if (
-          player.x + player.radius > b.x &&
-          player.x - player.radius < b.x + b.width &&
-          player.y + player.radius > b.y &&
-          player.y - player.radius < b.y + b.height
-        ) {
+        if (player.x + player.radius > b.x &&
+            player.x - player.radius < b.x + b.width &&
+            player.y + player.radius > b.y &&
+            player.y - player.radius < b.y + b.height) {
           gameOver = true;
           break;
         }
@@ -317,21 +295,27 @@
     }
 
     function draw() {
-      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      // --- RASTRO CURTO: sobreposição semitransparente para manter efeito de posição anterior ---
+      ctx.fillStyle = 'rgba(0, 0, 0, 0.1)';
+      ctx.fillRect(0, 0, canvas.width, canvas.height);  // efeito trail
+      // urgente reset do globalAlpha se usar; aqui usamos fillStyle
+
       if (!gameStarted) return;
 
+      // Borda
       ctx.strokeStyle = 'white';
       ctx.lineWidth = 2;
       ctx.strokeRect(boundary.x, boundary.y, boundary.width, boundary.height);
 
+      // Jogador
       const now = Date.now();
-      const inCooldown = now - player.lastImmuneEnd < player.immuneCooldown;
-      const cooldownRemaining = Math.max(0, player.immuneCooldown - (now - player.lastImmuneEnd));
+      const inCd = now - player.lastImmuneEnd < player.immuneCooldown;
       const immunityRemaining = player.immune ? Math.max(0, player.immuneDuration - (now - player.immuneTime)) : 0;
+      const cooldownRemaining = Math.max(0, player.immuneCooldown - (now - player.lastImmuneEnd));
 
       ctx.beginPath();
       ctx.arc(player.x, player.y, player.radius, 0, Math.PI * 2);
-      ctx.fillStyle = player.immune ? 'yellow' : inCooldown ? '#444' : 'white';
+      ctx.fillStyle = player.immune ? 'yellow' : inCd ? '#444' : 'white';
       ctx.fill();
 
       if (player.immune) {
@@ -342,9 +326,13 @@
         ctx.stroke();
       }
 
+      // Barras
       ctx.fillStyle = 'red';
-      bars.forEach(b => ctx.fillRect(b.x, b.y, b.width, b.height));
+      for (const b of bars) {
+        ctx.fillRect(b.x, b.y, b.width, b.height);
+      }
 
+      // HUD
       ctx.fillStyle = 'white';
       ctx.font = '24px Arial';
       ctx.textAlign = 'left';
@@ -352,10 +340,10 @@
 
       ctx.fillStyle = 'yellow';
       ctx.font = '18px Arial';
-      ctx.fillText(`Imunidade: ${(immunityRemaining / 1000).toFixed(1)}s`, 180, 28);
+      ctx.fillText(`Imunidade: ${(immunityRemaining/1000).toFixed(1)}s`, 180, 28);
 
-      ctx.fillStyle = inCooldown ? 'gray' : 'green';
-      ctx.fillText(`Recarga: ${(cooldownRemaining / 1000).toFixed(1)}s`, 340, 28);
+      ctx.fillStyle = inCd ? 'gray' : 'green';
+      ctx.fillText(`Recarga: ${(cooldownRemaining/1000).toFixed(1)}s`, 340, 28);
 
       if (gameOver) {
         finalScoreText.textContent = `Pontuação Final: ${score}`;
@@ -363,8 +351,7 @@
       }
     }
 
-    let lastFrameTime = 0;
-    let lastBarTime = 0;
+    let lastFrameTime = 0, lastBarTime = 0;
 
     function gameLoop(timestamp) {
       if (!gameStarted || gameOver) {
@@ -375,14 +362,16 @@
       const dt = (timestamp - lastFrameTime) / 16.67;
       lastFrameTime = timestamp;
 
+      // Definir dificuldade
       let barInterval, numBars;
-      if (score <= 10) { barInterval = 4000; numBars = 2; }
-      else if (score <= 25) { barInterval = 3000; numBars = 2; }
-      else if (score <= 35) { barInterval = 4000; numBars = 3; }
-      else if (score <= 45) { barInterval = 3800; numBars = 3; }
-      else if (score <= 55) { barInterval = 4000; numBars = 4; }
-      else { barInterval = 3500; numBars = 3; }
+      if (score <= 10)       { barInterval = 4000; numBars = 2; }
+      else if (score <= 25)  { barInterval = 3000; numBars = 2; }
+      else if (score <= 35)  { barInterval = 4000; numBars = 3; }
+      else if (score <= 45)  { barInterval = 3800; numBars = 3; }
+      else if (score <= 55)  { barInterval = 4000; numBars = 4; }
+      else                   { barInterval = 3500; numBars = 3; }
 
+      // Criação de barras no tempo certo
       if (timestamp - lastBarTime > barInterval) {
         for (let i = 0; i < numBars; i++) createBar();
         lastBarTime = timestamp;
