--- a/Jogos/CentralJogos.html
+++ b/Jogos/CentralJogos.html
@@ -1,101 +1,84 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jogos do Wolf</title>
-    <style>
-        body {
-            margin: 0;
-            height: 100vh;
-            background-color: black;
-            color: white;
-            display: flex;
-            flex-direction: column;
-        }
-        /* Voltar fixo no canto superior esquerdo */
-        #Voltar {
-            position: absolute;
-            top: 10px;
-            left: 10px;
-        }
-        #Voltar a {
-            text-decoration: none;
-            color: white;
-        }
-
-        /* Cabeçalho com título central */
-        header {
-            padding-top: 20px;
-            text-align: center;
-        }
-        header h1 {
-            margin: 0;
-            font-size: 36px;
-            letter-spacing: 2px;
-        }
-
-        /* Centra o conteúdo da lista de jogos */
-        main {
-            flex: 1;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-        ul {
-            list-style: none;
-            padding: 0;
-            margin: 0;
-            text-align: center;
-        }
-        ul li {
-            margin: 10px 0;
-        }
-
-        /* Estilo padrão para links de jogos */
-        .game-link {
-            display: inline-block;
-            padding: 10px 20px;
-            border: 2px solid white;
-            text-decoration: none;
-            color: white;
-            font-size: 24px;
-            border-radius: 5px;
-            transition: background-color 0.2s, color 0.2s;
-        }
-        .game-link:hover {
-            background-color: white;
-            color: black;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial‐scale=1.0" />
+  <title>Jogos do Wolf</title>
+  <style>
+    body {
+      margin:0;
+      height:100vh;
+      background:black;
+      color:white;
+      display:flex;
+      flex-direction:column;
+    }
+    #Voltar {
+      position:absolute;
+      top:10px; left:10px;
+    }
+    #Voltar a {
+      text-decoration:none;
+      color:white;
+    }
+    header {
+      padding-top:20px;
+      text-align:center;
+    }
+    header h1 {
+      margin:0;
+      font-size:36px;
+      letter-spacing:2px;
+    }
+    main {
+      flex:1;
+      display:flex;
+      justify-content:center;
+      align-items:center;
+    }
+    ul {
+      list-style:none;
+      padding:0;
+      margin:0;
+      display:grid;
+      grid-template-columns:repeat(auto-fill, minmax(200px, 1fr));
+      gap:20px;
+      width:100%;
+      max-width:600px;
+    }
+    .game-link {
+      display:flex;
+      justify-content:center;
+      align-items:center;
+      border:2px solid white;
+      text-decoration:none;
+      color:white;
+      font-size:24px;
+      border-radius:5px;
+      transition:background-color 0.2s, color 0.2s;
+      height:60px;
+    }
+    .game-link:hover {
+      background:white;
+      color:black;
+    }
+  </style>
 </head>
 <body>
-    <div id="Voltar">
-        <a href="../index.html"><h3><b>&larr; Voltar</b></h3></a>
-    </div>
+  <div id="Voltar">
+    <a href="../index.html"><h3><b>&larr; Voltar</b></h3></a>
+  </div>
 
-    <header>
-        <h1>Jogos</h1>
-    </header>
+  <header>
+    <h1>Jogos</h1>
+  </header>
 
-    <main>
-        <ul>
-            <li>
-                <a href="Lazerunner/LazeRunner.html" class="game-link">
-                    LazerRunner
-                </a>
-            </li>
-            <li>
-                <a href="#" class="game-link">Ping-Pong 2 (Em breve)</a>
-            </li>
-            <!-- Outros jogos podem ser adicionados assim:
-            <li>
-                <a href="OutroJogo/OutroJogo.html" class="game-link">
-                    Nome do Outro Jogo
-                </a>
-            </li>
-            -->
-        </ul>
-    </main>
+  <main>
+    <ul>
+      <li><a href="Lazerunner/LazeRunner.html" class="game-link">LazerRunner</a></li>
+      <li><a href="#" class="game-link">Ping‑Pong 2 (Em breve)</a></li>
+      <!-- mais jogos -->
+    </ul>
+  </main>
 </body>
 </html>
