--- a/Jogos/CentralJogos.html
+++ b/Jogos/CentralJogos.html
@@ -76,7 +76,7 @@
   <main>
     <ul>
       <li><a href="Lazerunner/LazeRunner.html" class="game-link">LazerRunner</a></li>
-      <li><a href="#" class="game-link">Ping‑Pong 2 (Em breve)</a></li>
+      <li><a href="#" class="game-link">Ping‑Pong 2 -(Em breve)-</a></li>
       <!-- mais jogos -->
     </ul>
   </main>
