--- a/Jogos/Lazerunner/LazeRunner.html
+++ b/Jogos/Lazerunner/LazeRunner.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Lazer Runner</title>
   <style>
     body {
@@ -39,7 +39,6 @@
       font-size: 14px;
       color: #aaa;
     }
-    /* Telas */
     #startScreen, #gameOverScreen {
       position: absolute;
       top: 0;
@@ -55,7 +54,9 @@
       font-size: 48px;
       text-align: center;
     }
-    #startScreen.hidden, #gameOverScreen.hidden { display: none; }
+    #startScreen.hidden, #gameOverScreen.hidden {
+      display: none;
+    }
     #startScreen button, #gameOverScreen button {
       margin: 20px;
       padding: 10px 20px;
@@ -75,7 +76,6 @@
       cursor: not-allowed;
       opacity: 0.6;
     }
-    /* Botão voltar */
     #backButton {
       position: absolute;
       top: 10px;
@@ -119,7 +119,7 @@
   <div id="version">Versão 1.3</div>
 
   <script>
-    // Previne clique direito e F12
+    // Proteção básica
     document.addEventListener('contextmenu', e => { e.preventDefault(); alert('Clique com o botão direito desativado.'); });
     document.addEventListener('keydown', e => {
       if (e.key === 'F12' || e.keyCode === 123) {
@@ -130,7 +130,6 @@
 
     const canvas = document.getElementById('gameCanvas');
     const ctx = canvas.getContext('2d');
-
     const startScreen = document.getElementById('startScreen');
     const gameOverScreen = document.getElementById('gameOverScreen');
     const playButton = document.getElementById('playButton');
@@ -139,41 +138,44 @@
     const finalScoreText = document.getElementById('finalScore');
 
     let gameStarted = false, scoreSaved = false;
-    let bars = [], score = 0, gameOver = false;
-
     const boundary = { x:70, y:70, width:canvas.width-140, height:canvas.height-140 };
     const player = {
-      x: canvas.width/2, y: canvas.height/2,
-      radius: 20, speed: 4,
-      immune: false, immuneTime:0,
-      immuneDuration:1500, immuneCooldown:2000,
-      lastImmuneEnd:0
+      x: canvas.width/2,
+      y: canvas.height/2,
+      radius: 20,
+      speed: 4,
+      immune: false,
+      immuneTime: 0,
+      immuneDuration: 1500,
+      immuneCooldown: 2000,
+      lastImmuneEnd: 0
     };
-
-    const keys = {
+    let bars = [], score = 0, gameOver = false;
+    let keys = {
       ArrowUp:false, ArrowDown:false,
       ArrowLeft:false, ArrowRight:false,
-      w:false,W:false,s:false,S:false,
-      a:false,A:false,d:false,D:false,
+      w:false, W:false, s:false, S:false,
+      a:false, A:false, d:false, D:false,
       ' ':false, Enter:false
     };
-
     let rankings = JSON.parse(localStorage.getItem('rankings')) || [];
 
     function saveRanking() {
-      try { localStorage.setItem('rankings', JSON.stringify(rankings)); }
-      catch (e) { alert('Erro ao salvar a pontuação.'); }
+      try {
+        localStorage.setItem('rankings', JSON.stringify(rankings));
+      } catch {
+        alert('Erro ao salvar a pontuação.');
+      }
     }
 
     function updateRanking() {
       const list = document.getElementById('rankingList');
       list.innerHTML = '';
-      rankings.sort((a,b)=>b.score-a.score).slice(0,10)
-        .forEach(e => {
-          const li = document.createElement('li');
-          li.textContent = `${e.name} - ${e.score}`;
-          list.appendChild(li);
-        });
+      rankings.sort((a,b)=>b.score-a.score).slice(0,10).forEach(e => {
+        const li = document.createElement('li');
+        li.textContent = `${e.name} - ${e.score}`;
+        list.appendChild(li);
+      });
     }
 
     document.addEventListener('keydown', e => {
@@ -186,25 +188,17 @@
         if (e.key === 'Enter' && gameOver) resetGame();
       }
     });
-    document.addEventListener('keyup', e => {
-      if (e.key in keys) keys[e.key] = false;
-    });
+    document.addEventListener('keyup', e => { if (e.key in keys) keys[e.key] = false; });
 
-    playButton.addEventListener('click', () => {
-      startScreen.classList.add('hidden');
-      gameStarted = true;
-      resetGame();
-    });
-    restartButton.addEventListener('click', () => {
-      gameOverScreen.classList.add('hidden');
-      resetGame();
-    });
+    playButton.addEventListener('click', () => { startScreen.classList.add('hidden'); gameStarted = true; resetGame(); });
+    restartButton.addEventListener('click', () => { gameOverScreen.classList.add('hidden'); resetGame(); });
     saveRankingButton.addEventListener('click', () => {
       if (scoreSaved) return;
       const name = prompt('Digite seu nome:');
       if (name && name.trim()) {
         rankings.push({ name: name.trim(), score });
-        saveRanking(); updateRanking();
+        saveRanking();
+        updateRanking();
         scoreSaved = true;
         saveRankingButton.disabled = true;
         saveRankingButton.textContent = 'Salvo';
@@ -235,19 +229,11 @@
       const length = Math.random()*400 + 200;
       const speed = 2 + Math.random()*1.8;
       let bar;
-      switch (dir) {
-        case 0:
-          bar = { x:-thickness, y:Math.random()*(canvas.height-length), width:thickness, height:length, dx:speed, dy:0 };
-          break;
-        case 1:
-          bar = { x:canvas.width, y:Math.random()*(canvas.height-length), width:thickness, height:length, dx:-speed, dy:0 };
-          break;
-        case 2:
-          bar = { x:Math.random()*(canvas.width-length), y:-thickness, width:length, height:thickness, dx:0, dy:speed };
-          break;
-        case 3:
-          bar = { x:Math.random()*(canvas.width-length), y:canvas.height, width:length, height:thickness, dx:0, dy:-speed };
-          break;
+      switch(dir) {
+        case 0: bar = { x:-thickness, y:Math.random()*(canvas.height-length), width:thickness, height:length, dx:speed, dy:0 }; break;
+        case 1: bar = { x:canvas.width, y:Math.random()*(canvas.height-length), width:thickness, height:length, dx:-speed, dy:0 }; break;
+        case 2: bar = { x:Math.random()*(canvas.width-length), y:-thickness, width:length, height:thickness, dx:0, dy:speed }; break;
+        case 3: bar = { x:Math.random()*(canvas.width-length), y:canvas.height, width:length, height:thickness, dx:0, dy:-speed }; break;
       }
       bars.push(bar);
     }
@@ -259,28 +245,23 @@
       if (keys.ArrowLeft||keys.a) dx--;
       if (keys.ArrowRight||keys.d) dx++;
       if (dx||dy) {
-        const len = Math.hypot(dx, dy);
-        player.x += dx/len * player.speed;
-        player.y += dy/len * player.speed;
+        const len = Math.hypot(dx,dy);
+        player.x += (dx/len)*player.speed;
+        player.y += (dy/len)*player.speed;
         player.x = Math.max(boundary.x+player.radius, Math.min(player.x, boundary.x+boundary.width-player.radius));
         player.y = Math.max(boundary.y+player.radius, Math.min(player.y, boundary.y+boundary.height-player.radius));
       }
     }
 
     function moveBars(dt) {
-      for (const b of bars) {
-        b.x += b.dx * dt;
-        b.y += b.dy * dt;
-      }
+      bars.forEach(b => { b.x += b.dx * dt; b.y += b.dy * dt; });
     }
 
     function checkCollisions() {
       if (player.immune) return;
       for (const b of bars) {
-        if (player.x + player.radius > b.x &&
-            player.x - player.radius < b.x + b.width &&
-            player.y + player.radius > b.y &&
-            player.y - player.radius < b.y + b.height) {
+        if (player.x+player.radius > b.x && player.x-player.radius < b.x+b.width &&
+            player.y+player.radius > b.y && player.y-player.radius < b.y+b.height) {
           gameOver = true;
           break;
         }
@@ -288,51 +269,43 @@
     }
 
     function manageImmunity() {
-      if (player.immune && Date.now() - player.immuneTime > player.immuneDuration) {
+      if (player.immune && Date.now()-player.immuneTime > player.immuneDuration) {
         player.immune = false;
         player.lastImmuneEnd = Date.now();
       }
     }
 
     function draw() {
-      // --- RASTRO CURTO: sobreposição semitransparente para manter efeito de posição anterior ---
-      ctx.fillStyle = 'rgba(0, 0, 0, 0.1)';
-      ctx.fillRect(0, 0, canvas.width, canvas.height);  // efeito trail
-      // urgente reset do globalAlpha se usar; aqui usamos fillStyle
+      ctx.fillStyle = 'rgba(0, 0, 0, 0.15)';
+      ctx.fillRect(0, 0, canvas.width, canvas.height);
 
       if (!gameStarted) return;
 
-      // Borda
       ctx.strokeStyle = 'white';
       ctx.lineWidth = 2;
       ctx.strokeRect(boundary.x, boundary.y, boundary.width, boundary.height);
 
-      // Jogador
       const now = Date.now();
       const inCd = now - player.lastImmuneEnd < player.immuneCooldown;
       const immunityRemaining = player.immune ? Math.max(0, player.immuneDuration - (now - player.immuneTime)) : 0;
       const cooldownRemaining = Math.max(0, player.immuneCooldown - (now - player.lastImmuneEnd));
 
       ctx.beginPath();
-      ctx.arc(player.x, player.y, player.radius, 0, Math.PI * 2);
+      ctx.arc(player.x, player.y, player.radius, 0, Math.PI*2);
       ctx.fillStyle = player.immune ? 'yellow' : inCd ? '#444' : 'white';
       ctx.fill();
 
       if (player.immune) {
         ctx.beginPath();
-        ctx.arc(player.x, player.y, player.radius + 10, 0, Math.PI * 2);
+        ctx.arc(player.x, player.y, player.radius+10, 0, Math.PI*2);
         ctx.strokeStyle = 'yellow';
         ctx.lineWidth = 3;
         ctx.stroke();
       }
 
-      // Barras
       ctx.fillStyle = 'red';
-      for (const b of bars) {
-        ctx.fillRect(b.x, b.y, b.width, b.height);
-      }
+      bars.forEach(b => ctx.fillRect(b.x, b.y, b.width, b.height));
 
-      // HUD
       ctx.fillStyle = 'white';
       ctx.font = '24px Arial';
       ctx.textAlign = 'left';
@@ -351,18 +324,15 @@
       }
     }
 
-    let lastFrameTime = 0, lastBarTime = 0;
-
-    function gameLoop(timestamp) {
+    let lastFrameTime=0, lastBarTime=0;
+    function gameLoop(ts) {
       if (!gameStarted || gameOver) {
         draw();
         return;
       }
+      const dt = (ts - lastFrameTime) / 16.67;
+      lastFrameTime = ts;
 
-      const dt = (timestamp - lastFrameTime) / 16.67;
-      lastFrameTime = timestamp;
-
-      // Definir dificuldade
       let barInterval, numBars;
       if (score <= 10)       { barInterval = 4000; numBars = 2; }
       else if (score <= 25)  { barInterval = 3000; numBars = 2; }
@@ -371,10 +341,9 @@
       else if (score <= 55)  { barInterval = 4000; numBars = 4; }
       else                   { barInterval = 3500; numBars = 3; }
 
-      // Criação de barras no tempo certo
-      if (timestamp - lastBarTime > barInterval) {
-        for (let i = 0; i < numBars; i++) createBar();
-        lastBarTime = timestamp;
+      if (ts - lastBarTime > barInterval) {
+        for (let i=0;i<numBars;i++) createBar();
+        lastBarTime = ts;
         score++;
       }
 
