--- a/Jogos/Lazerunner/LazeRunner.html
+++ b/Jogos/Lazerunner/LazeRunner.html
@@ -41,10 +41,8 @@
     }
     #startScreen, #gameOverScreen {
       position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
       background: rgba(0,0,0,0.8);
       display: flex;
       flex-direction: column;
@@ -78,8 +76,7 @@
     }
     #backButton {
       position: absolute;
-      top: 10px;
-      left: 10px;
+      top: 10px; left: 10px;
       padding: 8px 16px;
       font-size: 18px;
       cursor: pointer;
@@ -119,7 +116,7 @@
   <div id="version">Versão 1.3</div>
 
   <script>
-    // Proteção básica
+    // Prevenção de clique com botão direito e F12
     document.addEventListener('contextmenu', e => { e.preventDefault(); alert('Clique com o botão direito desativado.'); });
     document.addEventListener('keydown', e => {
       if (e.key === 'F12' || e.keyCode === 123) {
@@ -137,33 +134,25 @@
     const saveRankingButton = document.getElementById('saveRankingButton');
     const finalScoreText = document.getElementById('finalScore');
 
+    // Variáveis de jogo
     let gameStarted = false, scoreSaved = false;
     const boundary = { x:70, y:70, width:canvas.width-140, height:canvas.height-140 };
     const player = {
-      x: canvas.width/2,
-      y: canvas.height/2,
-      radius: 20,
-      speed: 4,
-      immune: false,
-      immuneTime: 0,
-      immuneDuration: 1500,
-      immuneCooldown: 2000,
-      lastImmuneEnd: 0
+      x: canvas.width/2, y: canvas.height/2,
+      radius: 20, speed: 4,
+      immune: false, immuneTime: 0,
+      immuneDuration: 1500, immuneCooldown: 2000, lastImmuneEnd: 0
     };
     let bars = [], score = 0, gameOver = false;
-    let keys = {
-      ArrowUp:false, ArrowDown:false,
-      ArrowLeft:false, ArrowRight:false,
-      w:false, W:false, s:false, S:false,
-      a:false, A:false, d:false, D:false,
-      ' ':false, Enter:false
-    };
+    let keys = { ArrowUp:false, ArrowDown:false, ArrowLeft:false, ArrowRight:false,
+                 w:false, W:false, s:false, S:false, a:false, A:false, d:false, D:false,
+                 ' ':false, Enter:false };
     let rankings = JSON.parse(localStorage.getItem('rankings')) || [];
 
     function saveRanking() {
       try {
         localStorage.setItem('rankings', JSON.stringify(rankings));
-      } catch {
+      } catch (e) {
         alert('Erro ao salvar a pontuação.');
       }
     }
@@ -171,11 +160,14 @@
     function updateRanking() {
       const list = document.getElementById('rankingList');
       list.innerHTML = '';
-      rankings.sort((a,b)=>b.score-a.score).slice(0,10).forEach(e => {
-        const li = document.createElement('li');
-        li.textContent = `${e.name} - ${e.score}`;
-        list.appendChild(li);
-      });
+      rankings
+        .sort((a,b) => b.score - a.score)
+        .slice(0,10)
+        .forEach(e => {
+          const li = document.createElement('li');
+          li.textContent = `${e.name} - ${e.score}`;
+          list.appendChild(li);
+        });
     }
 
     document.addEventListener('keydown', e => {
@@ -229,7 +221,7 @@
       const length = Math.random()*400 + 200;
       const speed = 2 + Math.random()*1.8;
       let bar;
-      switch(dir) {
+      switch (dir) {
         case 0: bar = { x:-thickness, y:Math.random()*(canvas.height-length), width:thickness, height:length, dx:speed, dy:0 }; break;
         case 1: bar = { x:canvas.width, y:Math.random()*(canvas.height-length), width:thickness, height:length, dx:-speed, dy:0 }; break;
         case 2: bar = { x:Math.random()*(canvas.width-length), y:-thickness, width:length, height:thickness, dx:0, dy:speed }; break;
@@ -245,9 +237,9 @@
       if (keys.ArrowLeft||keys.a) dx--;
       if (keys.ArrowRight||keys.d) dx++;
       if (dx||dy) {
-        const len = Math.hypot(dx,dy);
-        player.x += (dx/len)*player.speed;
-        player.y += (dy/len)*player.speed;
+        const len = Math.hypot(dx, dy);
+        player.x += dx/len * player.speed;
+        player.y += dy/len * player.speed;
         player.x = Math.max(boundary.x+player.radius, Math.min(player.x, boundary.x+boundary.width-player.radius));
         player.y = Math.max(boundary.y+player.radius, Math.min(player.y, boundary.y+boundary.height-player.radius));
       }
@@ -260,8 +252,10 @@
     function checkCollisions() {
       if (player.immune) return;
       for (const b of bars) {
-        if (player.x+player.radius > b.x && player.x-player.radius < b.x+b.width &&
-            player.y+player.radius > b.y && player.y-player.radius < b.y+b.height) {
+        if (player.x+player.radius > b.x &&
+            player.x-player.radius < b.x+b.width &&
+            player.y+player.radius > b.y &&
+            player.y-player.radius < b.y+b.height) {
           gameOver = true;
           break;
         }
@@ -269,67 +263,70 @@
     }
 
     function manageImmunity() {
-      if (player.immune && Date.now()-player.immuneTime > player.immuneDuration) {
+      if (player.immune && Date.now() - player.immuneTime > player.immuneDuration) {
         player.immune = false;
         player.lastImmuneEnd = Date.now();
       }
     }
 
     function draw() {
-      ctx.fillStyle = 'rgba(0, 0, 0, 0.15)';
-      ctx.fillRect(0, 0, canvas.width, canvas.height);
-
       if (!gameStarted) return;
 
+      // 1) limpa tela e fundo preto
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      ctx.fillStyle = '#000';
+      ctx.fillRect(0, 0, canvas.width, canvas.height);
+
+      // 2) desenha borda, barras e HUD (sem rastro)
       ctx.strokeStyle = 'white';
       ctx.lineWidth = 2;
-      ctx.strokeRect(boundary.x, boundary.y, boundary.width, boundary.height);
+      ctx.strokeRect(boundary.x, boundary.y, boundary.width, boundary.height);      
+      ctx.fillStyle = 'red';
+      bars.forEach(b => ctx.fillRect(b.x, b.y, b.width, b.height));
 
       const now = Date.now();
       const inCd = now - player.lastImmuneEnd < player.immuneCooldown;
-      const immunityRemaining = player.immune ? Math.max(0, player.immuneDuration - (now - player.immuneTime)) : 0;
-      const cooldownRemaining = Math.max(0, player.immuneCooldown - (now - player.lastImmuneEnd));
-
-      ctx.beginPath();
-      ctx.arc(player.x, player.y, player.radius, 0, Math.PI*2);
-      ctx.fillStyle = player.immune ? 'yellow' : inCd ? '#444' : 'white';
-      ctx.fill();
-
-      if (player.immune) {
-        ctx.beginPath();
-        ctx.arc(player.x, player.y, player.radius+10, 0, Math.PI*2);
-        ctx.strokeStyle = 'yellow';
-        ctx.lineWidth = 3;
-        ctx.stroke();
-      }
-
-      ctx.fillStyle = 'red';
-      bars.forEach(b => ctx.fillRect(b.x, b.y, b.width, b.height));
+      const immunityRem = player.immune ? Math.max(0, player.immuneDuration - (now - player.immuneTime)) : 0;
+      const cooldownRem = Math.max(0, player.immuneCooldown - (now - player.lastImmuneEnd));
 
       ctx.fillStyle = 'white';
       ctx.font = '24px Arial';
       ctx.textAlign = 'left';
       ctx.fillText(`Pontuação: ${score}`, 10, 30);
-
       ctx.fillStyle = 'yellow';
       ctx.font = '18px Arial';
-      ctx.fillText(`Imunidade: ${(immunityRemaining/1000).toFixed(1)}s`, 180, 28);
-
+      ctx.fillText(`Imunidade: ${(immunityRem/1000).toFixed(1)}s`, 180, 28);
       ctx.fillStyle = inCd ? 'gray' : 'green';
-      ctx.fillText(`Recarga: ${(cooldownRemaining/1000).toFixed(1)}s`, 340, 28);
+      ctx.fillText(`Recarga: ${(cooldownRem/1000).toFixed(1)}s`, 340, 28);
 
+      // 3) aplica rastro apenas para o jogador
+      ctx.fillStyle = 'rgba(0, 0, 0, 0.15)';
+      ctx.fillRect(0, 0, canvas.width, canvas.height);
+
+      // 4) desenha jogador por cima
+      ctx.beginPath();
+      ctx.arc(player.x, player.y, player.radius, 0, Math.PI*2);
+      ctx.fillStyle = player.immune ? 'yellow' : inCd ? '#444' : 'white';
+      ctx.fill();
+      if (player.immune) {
+        ctx.beginPath();
+        ctx.arc(player.x, player.y, player.radius + 10, 0, Math.PI*2);
+        ctx.strokeStyle = 'yellow';
+        ctx.lineWidth = 3;
+        ctx.stroke();
+      }
+
+      // 5) exibe tela de game over se necessário
       if (gameOver) {
         finalScoreText.textContent = `Pontuação Final: ${score}`;
         gameOverScreen.classList.remove('hidden');
       }
     }
 
-    let lastFrameTime=0, lastBarTime=0;
+    let lastFrameTime = 0, lastBarTime = 0;
     function gameLoop(ts) {
-      if (!gameStarted || gameOver) {
-        draw();
-        return;
-      }
+      if (!gameStarted || gameOver) { draw(); return; }
+
       const dt = (ts - lastFrameTime) / 16.67;
       lastFrameTime = ts;
 
@@ -342,7 +339,7 @@
       else                   { barInterval = 3500; numBars = 3; }
 
       if (ts - lastBarTime > barInterval) {
-        for (let i=0;i<numBars;i++) createBar();
+        for (let i = 0; i < numBars; i++) createBar();
         lastBarTime = ts;
         score++;
       }
