--- a/Jogos/CentralJogos.html
+++ b/Jogos/CentralJogos.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial‐scale=1.0" />
-  <title>Jogos do Wolf</title>
+  <title>Jogos do Wolf 🎮 </title>
   <style>
     body {
       margin:0;
